<resources>
    <string name="app_name">Binar Challenge Dua</string>
    <string name="cari_layanan_makanan_amp_tujuan"><![CDATA[Cari layanan, makanan, & tujuan]]></string>
    <string name="bayar">Bayar</string>
    <string name="klik_amp_cek_riwayat"><![CDATA[Klik & cek riwayat]]></string>
    <string name="rp109_048">Rp109.048</string>
    <string name="isi_saldo">Isi Saldo</string>
    <string name="eksplor">Eksplor</string>
    <string name="gocar">GoCar</string>
    <string name="goride">GoRide</string>
    <string name="gofood">GoFood</string>
    <string name="gosend">GoSend</string>
    <string name="gomart">GoMart</string>
    <string name="gopulsa">GoPulsa</string>
    <string name="check_in">Check in</string>
    <string name="lainnya">Lainnya</string>
    <string name="akses_cepat">Akses Cepat</string>
    <string name="_193_xp_lagi_ada_harta_karun">193 XP lagi ada Harta Karun</string>
    <string name="ada_voucher_nganggur_nih">Ada voucher nganggur, nih</string>
    <string name="restoran_terdekat">Restoran Terdekat</string>
    <string name="harta_karun_bentar_lagi_hilang">Harta Karun bentar lagi hilang</string>
    <string name="festival_idaman_perempuan">Festival idaman perempuan!</string>
    <string name="deskripsi_promo_gopay">Temukan kebutuhan cantik-mu hemat pakai GoPay dengan cashback 50%, Klik!</string>
    <string name="beranda">Beranda</string>
    <string name="promo">Promo</string>
    <string name="pesanan">Pesanan</string>
    <string name="chat">Chat</string>
    <string name="celana_olahraga_pria_pendek">Celana Olahraga Pria Pendek</string>
    <string name="isi_saldo_shopeepay">Isi Saldo ShopeePay</string>
    <string name="rp16_000">Rp16.000</string>
    <string name="_5_koin">5 Koin</string>
    <string name="klaim_koin_di_sini">Klaim koin di sini</string>
    <string name="pedulilindungi">PeduliLindungi</string>
    <string name="gratis_ongkir_amp_nvoucher"><![CDATA[Gratis Ongkir &\nVoucher]]></string>
    <string name="pulsa_tagihan_amp_nhiburan"><![CDATA[Pulsa, Tagihan &\nHiburan]]></string>
    <string name="shopee_nsupermarket">Shopee\nSupermarket</string>
    <string name="shopee_mall">Shopee Mall</string>
    <string name="deals_sekitarmu">Deals Sekitarmu</string>
    <string name="shopee_games">Shopee Games</string>
    <string name="bayar_di_tempat">Bayar Di Tempat</string>
    <string name="shopeefood">ShopeeFood</string>
    <string name="serba_n1_000">SERBA\n1.000</string>
    <string name="serba_seribu">Serba Seribu</string>
    <string name="flash_sale">FLASH SALE</string>
    <string name="lihat_lainnya"><![CDATA[Lihat Lainnya >]]></string>
    <string name="rp62_500">Rp62.500</string>
    <string name="rp120_500">Rp120.500</string>
    <string name="rekomendasi">Rekomendasi</string>
    <string name="feed">Feed</string>
    <string name="shopee_live">Shopee Live</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="saya">Saya</string>
    <string name="_11_666">11.666</string>
    <string name="klik_buat_detailnya">Klik buat detailnya</string>
    <string name="pesen_sekarang_nbayar_akhir_bulan">Pesen sekarang,\nbayar akhir bulan</string>
    <string name="rp100_000">Rp100.000</string>
    <string name="rp200_000">Rp200.000</string>
    <string name="img_diskon">img_diskon</string>
    <string name="img_panah">img_panah</string>
    <string name="img_batas">img_batas</string>
    <string name="img_food">img_food</string>
    <string name="img_gopay_coins">img gopay coins</string>
    <string name="img_gopay_later">img gopay later</string>
    <string name="img_gopay">img gopay</string>
    <string name="img_tambah">img tambah</string>
    <string name="img_roket">img roket</string>
    <string name="img_bintang">img bintang</string>
    <string name="img_hourglass">img hourglass</string>
    <string name="img_people">img people</string>
    <string name="img_kamera">img kamera</string>
    <string name="img_keranjang">img keranjang</string>
    <string name="img_scan">img scan</string>
    <string name="img_uang">img uang</string>
    <string name="cod">COD</string>
</resources>