<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_marginHorizontal="15dp"
    android:layout_marginTop="15dp"
    android:background="@drawable/style_tempat_saldo"
    android:orientation="horizontal">

    <androidx.core.widget.NestedScrollView
        android:layout_width="140dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/style_saldo"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/logo_gopay_coins"
                    android:contentDescription="@string/img_gopay_coins" />

                <TextView
                    style="@style/TextStyle.Bold"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/_11_666"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    style="@style/TextStyle.Medium.Green"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/klik_buat_detailnya"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/style_saldo"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/logo_gopay_later"
                    android:contentDescription="@string/img_gopay_later" />

                <TextView
                    style="@style/TextStyle.Light"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/pesen_sekarang_nbayar_akhir_bulan"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/style_saldo"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/logo_gopay"
                    android:contentDescription="@string/img_gopay" />

                <TextView
                    style="@style/TextStyle.Bold"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/rp109_048"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    style="@style/TextStyle.Medium.Green"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/klik_amp_cek_riwayat"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:columnCount="3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/style_button_icon">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_baseline_arrow_upward_24"
                    android:contentDescription="@string/img_panah" />
            </FrameLayout>

            <TextView
                style="@style/TextStyle.Medium.ImageButton"
                android:text="@string/bayar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/style_button_icon">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_baseline_add_24"
                    android:contentDescription="@string/img_tambah" />
            </FrameLayout>

            <TextView
                style="@style/TextStyle.Medium.ImageButton"
                android:text="@string/isi_saldo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/style_button_icon">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_baseline_rocket_launch_24"
                    android:contentDescription="@string/img_roket" />
            </FrameLayout>

            <TextView
                style="@style/TextStyle.Medium.ImageButton"
                android:text="@string/eksplor" />
        </LinearLayout>

    </GridLayout>

</LinearLayout>
