<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginHorizontal="15dp"
    android:layout_marginTop="15dp"
    android:background="@drawable/style_rank"
    android:elevation="4dp"
    android:translationZ="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_bintang"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_baseline_star_24"
            android:contentDescription="@string/img_bintang" />

        <TextView
            android:id="@+id/tv_harta"
            style="@style/TextStyle.Medium.Black"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/img_bintang"
            android:text="@string/_193_xp_lagi_ada_harta_karun" />

        <ProgressBar
            android:id="@+id/progress_horizontal"
            android:layout_width="250dp"
            android:layout_height="3dp"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:progress="15"
            android:progressTint="@color/green_gojek"
            android:layout_below="@+id/tv_harta"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/img_bintang"
            />


        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/progress_horizontal"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:contentDescription="@string/img_panah" />

        <ImageView
            android:id="@+id/img_hourglass"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_below="@+id/progress_horizontal"
            android:layout_marginTop="7dp"
            android:layout_toEndOf="@+id/img_bintang"
            android:src="@drawable/ic_baseline_hourglass_bottom_24"
            android:contentDescription="@string/img_hourglass" />


        <TextView
            style="@style/TextStyle.Medium.Black"
            android:layout_below="@+id/progress_horizontal"
            android:layout_marginTop="9dp"
            android:layout_toEndOf="@+id/img_hourglass"
            android:text="@string/harta_karun_bentar_lagi_hilang"
            android:textSize="12sp" />
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/style_rank_button" />

</FrameLayout>