<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="15dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/style_button_transparan" />

        <ImageView
            android:id="@+id/img_promo_gojek"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:scaleType="fitXY"
            android:src="@drawable/img_promo_gojek"
            android:contentDescription="@string/promo" />

        <TextView
            android:id="@+id/tv_judul_promo"
            style="@style/TextStyle.Bold.Black"
            android:layout_below="@+id/img_promo_gojek"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:text="@string/festival_idaman_perempuan" />

        <TextView
            style="@style/TextStyle.Light.Menu.Black"
            android:layout_below="@+id/tv_judul_promo"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:text="@string/deskripsi_promo_gopay"
            android:textSize="12sp" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>