<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_satu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_gojek">

        <SearchView
            android:id="@+id/input_search"
            style="@style/InputSearch"
            android:iconifiedByDefault="false"
            android:paddingStart="-10dp"
            android:queryHint="@string/cari_layanan_makanan_amp_tujuan"
            android:theme="@style/AppSearchView"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            style="@style/IconSmall"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="7dp"
            android:layout_toEndOf="@+id/input_search"
            android:background="@drawable/ic_baseline_account_circle_24"
            android:contentDescription="@string/img_people" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_navigation"
        android:layout_below="@+id/rl_satu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/layout_gojek_saldo"/>

            <include layout="@layout/layout_gojek_menu"/>

            <include layout="@layout/layout_gojek_rank"/>

            <TextView
                style="@style/TextStyle.Bold"
                android:layout_margin="15dp"
                android:text="@string/akses_cepat"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <include layout="@layout/layout_gojek_akses" />

            <include layout="@layout/layout_gojek_promo"/>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_navigation_menu" />

</RelativeLayout>


